# Breakingnow

./: .replit  main.py  pyproject.toml
attached_assets/: 2025.04.30-00.00.00.csv  Pasted--EMERALD-S-KILLFEED-SYNC-RATE-LIMIT-HISTORICAL-PARSER-DIAGNOSTIC-PROMPT-OBJECTIVE-You-mus-1748037247160.txt  uodate.md
bot/cogs/: admin_channels.py  bounties.py  core.py  economy.py  embed_test.py  factions.py  gambling.py  leaderboards.py  linking.py  parsers.py  premium.py  stats.py
bot/models/: database.py
bot/parsers/: historical_parser.py  killfeed_parser.py  log_parser.py
bot/utils/: embed_factory.py
